# RFM69_ArduinoPi

./: .gitmodules  Makefile.am  README.md  configure.ac  syncToPi.sh
Arduino/SendTo_RFM69/: SendTo_RFM69.ino  trial.h
bentemp/: Makefile.am  hello.cpp
